--- a/package.json
+++ b/package.json
@@ -33,17 +33,16 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "readline": "0.0.3",
     "split": "^0.3.0",
     "stream-to-array": "^1.0.0",
-    "through2": "^0.4.2",
     "through2-filter": "^1.3.1"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-jshint": "~0.7.2"
+    "grunt-contrib-jshint": "^0.10.0",
+    "recursive-readdir": "^1.1.1"
   },
   "peerDependencies": {
     "grunt": "~0.4.1"
